# Arma-Persistent-Gear

./: .gitignore  README.md  hemtt.toml  mod.cpp
.github/: release-drafter.yml
.github/workflows/: arma.yaml  hemtt.yaml  release-drafter.yaml  release.yaml  rust.yml
.hemtt/: base.toml
addons/: persistent_gear_bank.pbo  persistent_gear_common.pbo  persistent_gear_loadout.pbo  persistent_gear_locker.pbo  persistent_gear_main.pbo  persistent_gear_shop.pbo  persistent_gear_shop_arsenal.pbo  pmc_arsenal.pbo  pmc_common.pbo  pmc_main.pbo
addons/arsenal/: $PBOPREFIX$  AceArsenalSorts.hpp  CfgEventHandlers.hpp  RscAttributes.hpp  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/bank/: $PBOPREFIX$  XEH_PREP.hpp  XEH_preInit.sqf  script_component.ht.hpp
addons/commands/: $PBOPREFIX$  XEH_postInit.sqf  config.cpp  script_component.hpp
addons/common/: $PBOPREFIX$  CfgEventHandlers.hpp  XEH_PREP.hpp  XEH_postInit.sqf  XEH_postInitServer.sqf  XEH_preInit.sqf  script_component.hpp
addons/db/: $PBOPREFIX$  CfgEventHandlers.hpp  XEH_PREP.hpp  XEH_postInit.sqf  XEH_postInitClient.sqf  XEH_postInitServer.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/loadout/: $PBOPREFIX$  XEH_PREP.hpp  XEH_preInit.sqf  script_component.ht.hpp
addons/locker/: $PBOPREFIX$  XEH_PREP.hpp  XEH_preInit.sqf  script_component.ht.hpp
addons/main/: $PBOPREFIX$  Cfg3DEN.hpp  config.cpp  (+4 more)
docs/: bundle.js  insomnia.json
extension/: Cargo.toml
extension/src/: items.rs  lib.rs  loadouts.rs  locker.rs  players.rs  purchases.rs  traits.rs  transactions.rs  variables.rs
extension/src/models/: item.rs  loadout.rs  locker.rs  mod.rs  purchase.rs  traits.rs  transaction.rs  variables.rs
(+105 files in other folders)
